// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Updated Components/Tag Clearable Tag 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-3:focus-visible {
  background: #F5F5FF;
  border-color: #175bf5;
}

.emotion-4 {
  width: 1rem;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
}

.emotion-4:hover {
  background: rgba(84,94,255,0.06);
  border-radius: 6.25rem;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #1249C4;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-6 path {
  fill: #1249C4;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-3"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          Label
          <div
            aria-hidden="true"
            className="emotion-4"
            tabIndex={-1}
          >
            <span
              className="emotion-5"
              data-testid="undefined_tag_suffix"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tag Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="a-universal-tag-that-is-used-to-highlight-system-generated-metadata."
      >
        A universal Tag that is used to highlight system-generated metadata.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tag Playground 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            aria-label="Label"
            aria-selected={false}
            className="emotion-3"
            data-testid="undefined_tag_container"
            onKeyDown={[Function]}
            tabIndex={-1}
          >
            Label
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tag Read-only Tag 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #e7eefe;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #FFE7F0;
  color: #CB205D;
  border: 0.0625rem solid;
  border-color: #FFB8D1;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #f3eaff;
  color: #6c28cc;
  border: 0.0625rem solid;
  border-color: #dbc1ff;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #d1faf0;
  color: #0C7D61;
  border: 0.0625rem solid;
  border-color: #00C6A2;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-3"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Label
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-4"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Label
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-5"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Label
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-6"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Label
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-7"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Label
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tag Read-only Tag with icon 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-4 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  fill: #1249C4;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-5 path {
  fill: #1249C4;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #e7eefe;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #FFE7F0;
  color: #CB205D;
  border: 0.0625rem solid;
  border-color: #FFB8D1;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-11 {
  fill: #CB205D;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-11 path {
  fill: #CB205D;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #f3eaff;
  color: #6c28cc;
  border: 0.0625rem solid;
  border-color: #dbc1ff;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-14 {
  fill: #6c28cc;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-14 path {
  fill: #6c28cc;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #d1faf0;
  color: #0C7D61;
  border: 0.0625rem solid;
  border-color: #00C6A2;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-17 {
  fill: #0C7D61;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-17 path {
  fill: #0C7D61;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-3"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
          Label
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-6"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-5"
            />
          </span>
          Label
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-9"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-11"
            />
          </span>
          Label
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-12"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-14"
            />
          </span>
          Label
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-15"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <span
            className="emotion-4"
            onClick={[Function]}
          >
            <span
              className="emotion-17"
            />
          </span>
          Label
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tag Selectable Tag 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: pointer;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-3:hover {
  background: #F5F5FF;
}

.emotion-3:focus-visible {
  background: #F5F5FF;
  border-color: #175bf5;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: pointer;
  background: #F5F5FF;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-4:hover {
  background: #F5F5FF;
}

.emotion-4:focus-visible {
  background: #F5F5FF;
  border-color: #175bf5;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #1249C4;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-6 path {
  fill: #1249C4;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={false}
          className="emotion-3"
          data-testid="undefined_tag_container"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          Label
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Label"
          aria-selected={true}
          className="emotion-4"
          data-testid="undefined_tag_container"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="emotion-5"
            data-testid="undefined_tag_prefix"
            onClick={[Function]}
          >
            <span
              className="emotion-6"
            />
          </span>
          Label
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Tag Tag Sizes 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #e7eefe;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #FFE7F0;
  color: #CB205D;
  border: 0.0625rem solid;
  border-color: #FFB8D1;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #f3eaff;
  color: #6c28cc;
  border: 0.0625rem solid;
  border-color: #dbc1ff;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #d1faf0;
  color: #0C7D61;
  border: 0.0625rem solid;
  border-color: #00C6A2;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0rem 0.25rem;
  cursor: auto;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.125rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0rem 0.25rem;
  cursor: auto;
  background: #e7eefe;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.125rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0rem 0.25rem;
  cursor: auto;
  background: #FFE7F0;
  color: #CB205D;
  border: 0.0625rem solid;
  border-color: #FFB8D1;
  border-radius: 0.125rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0rem 0.25rem;
  cursor: auto;
  background: #f3eaff;
  color: #6c28cc;
  border: 0.0625rem solid;
  border-color: #dbc1ff;
  border-radius: 0.125rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0rem 0.25rem;
  cursor: auto;
  background: #d1faf0;
  color: #0C7D61;
  border: 0.0625rem solid;
  border-color: #00C6A2;
  border-radius: 0.125rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: pointer;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-19:hover {
  background: #F5F5FF;
}

.emotion-19:focus-visible {
  background: #F5F5FF;
  border-color: #175bf5;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: pointer;
  background: #F5F5FF;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-20:hover {
  background: #F5F5FF;
}

.emotion-20:focus-visible {
  background: #F5F5FF;
  border-color: #175bf5;
}

.emotion-21 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-22 {
  fill: #1249C4;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-22 path {
  fill: #1249C4;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0rem 0.25rem;
  cursor: pointer;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.125rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-24:hover {
  background: #F5F5FF;
}

.emotion-24:focus-visible {
  background: #F5F5FF;
  border-color: #175bf5;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0rem 0.25rem;
  cursor: pointer;
  background: #F5F5FF;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.125rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-25:hover {
  background: #F5F5FF;
}

.emotion-25:focus-visible {
  background: #F5F5FF;
  border-color: #175bf5;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0.25rem 0.5rem;
  cursor: auto;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.25rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-31:focus-visible {
  background: #F5F5FF;
  border-color: #175bf5;
}

.emotion-32 {
  width: 1rem;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
}

.emotion-32:hover {
  background: rgba(84,94,255,0.06);
  border-radius: 6.25rem;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-sizing: border-box;
  gap: 0.25rem;
  padding: 0rem 0.25rem;
  cursor: auto;
  background: #ffffff;
  color: #1249C4;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  border-radius: 0.125rem;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-36:focus-visible {
  background: #F5F5FF;
  border-color: #175bf5;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-3"
        >
          Read-only Tag
        </p>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Normal"
          aria-selected={false}
          className="emotion-5"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Normal
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Normal"
          aria-selected={false}
          className="emotion-6"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Normal
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Normal"
          aria-selected={false}
          className="emotion-7"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Normal
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Normal"
          aria-selected={false}
          className="emotion-8"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Normal
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Normal"
          aria-selected={false}
          className="emotion-9"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Normal
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Small"
          aria-selected={false}
          className="emotion-11"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Small
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Small"
          aria-selected={false}
          className="emotion-12"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Small
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Small"
          aria-selected={false}
          className="emotion-13"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Small
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Small"
          aria-selected={false}
          className="emotion-14"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Small
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Small"
          aria-selected={false}
          className="emotion-15"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          Small
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-3"
        >
          Selectable Tag
        </p>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Normal"
          aria-selected={false}
          className="emotion-19"
          data-testid="undefined_tag_container"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          Normal
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Normal"
          aria-selected={true}
          className="emotion-20"
          data-testid="undefined_tag_container"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="emotion-21"
            data-testid="undefined_tag_prefix"
            onClick={[Function]}
          >
            <span
              className="emotion-22"
            />
          </span>
          Normal
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Small"
          aria-selected={false}
          className="emotion-24"
          data-testid="undefined_tag_container"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          Small
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Small"
          aria-selected={true}
          className="emotion-25"
          data-testid="undefined_tag_container"
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <span
            className="emotion-21"
            data-testid="undefined_tag_prefix"
            onClick={[Function]}
          >
            <span
              className="emotion-22"
            />
          </span>
          Small
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-3"
        >
          Clearable Tag
        </p>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Normal"
          aria-selected={false}
          className="emotion-31"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          Normal
          <div
            aria-hidden="true"
            className="emotion-32"
            tabIndex={-1}
          >
            <span
              className="emotion-21"
              data-testid="undefined_tag_suffix"
              onClick={[Function]}
            >
              <span
                className="emotion-22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          aria-label="Small"
          aria-selected={false}
          className="emotion-36"
          data-testid="undefined_tag_container"
          onKeyDown={[Function]}
          tabIndex={0}
        >
          Small
          <div
            aria-hidden="true"
            className="emotion-32"
            tabIndex={-1}
          >
            <span
              className="emotion-21"
              data-testid="undefined_tag_suffix"
              onClick={[Function]}
            >
              <span
                className="emotion-22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
